--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -15,8 +15,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #adcce0 no-repeat center 50%;
-    vertical-align: middle;
+    background: #ffffff no-repeat center 50%;
     text-align: center;
     padding-top: 20%;
     z-index: 999;
@@ -31,6 +30,11 @@ body {
     text-align: center;
     z-index: 999;
     display: none;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 
@@ -43,7 +47,6 @@ body {
     top: 28%;
     left: 38%;
     padding: 50px;
-
 }
 
 .logout_button{
@@ -69,52 +72,67 @@ body {
 }
 
 .container{
+    background-color: #FBFCFF;
     position: fixed;
     display: grid;
-    grid-template-columns: 20vw 80vw;
-    grid-template-rows: 10% 90%;
+    grid-template-columns: 20vw 60vw 20vw;
+    grid-template-rows: 7.5% 92.5%;
     border-radius: 10px;
-    height: 95vh;
+    height: 100vh;
 }
 .left{
     grid-column: 1/2;
-    background-color: #708090;
-    color: #ffffff;
-    border-radius: 20px 0 0 20px;
-    height: 100vh;
+    grid-row: 2/3;
+    background-color: #FFFFFF;
+    color: #81868d;
+    border-radius: 20px;
+    height: 85vh;
     position: relative;
-
-
+    margin: 4%;
+    padding-top: 30px;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 .logotable{
-    height: 10%;
-    padding: 15px;
-    padding-right: 30px;
+    padding: 2%;
+    height: 200px;
+    float: left;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 .stamford{
-    font-size: 25px;
+    font-size: 19px;
     text-align: left;
-    margin-left: 15px;
-    color: #ffffff;
+    margin-left: 10px;
+    color: #000000;
 }
 .logo{
     margin-left: 10px;
-    height: 70%;
+    height: 50%;
     width: auto;
-    filter: brightness(0) invert(1);
 }
 
 ul{
     list-style-type: none;
 }
 
+.left li{
+    padding: 20px;
+    margin-left: 0;
+    margin: 10px;
+    font-size: 17px;
+    width: 70%;
+    border-radius: 10px;    
+}
+
 li{
-    padding: 25px;
+    padding: 20px;
     margin: 10px;
     font-size: 20px;
     width: 70%;
-    border-radius: 10px;
-    
+    border-radius: 10px;    
 }
 
 .fa-angle-right{
@@ -123,11 +141,18 @@ li{
     float:right;
 }
 
-.btn:hover, .active{
-    color: #000000;
-    background-color:  #ebf2ff;
+.btn:hover{
+    color: #4558CB;
+    background-color:  #ffffff;
+    border: #4558CB 1px solid;
     transition: all 0.4s;
 }
+.active{
+    color: #ffffff;
+    background-color:  #4558CB;
+    transition: all 0.4s;
+}
+
 .btn:hover .fa-angle-right{
     display: block;
 }
@@ -140,53 +165,53 @@ i{
     border: 0px;
     border-radius: 5px;
 }
+#menu2{
+    position: absolute;
+    bottom: 0;
+    width: 90%;
+    margin-bottom: 25px;
+}
 .fa-arrow-right{
     display:none;
 }
 
 .name_pic{
     grid-row: 1/2;
-    grid-column: 2/3;
+    grid-column: 1/4;
     text-align: center;
     display: inline;
-    border-radius: 0 20px 0 0;
     background-color: #ffffff;
-    border-bottom: 0;
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 10px -30px;
     position:relative;
     z-index:2;
 }
+
 #pagetitle{
     display: inline;
-    top: 50%;
-    float: left;
-    margin-left: 50px;
     color: #2d3041;
+    line-height: 7.5vh;
 }
 
 .namepic{
+    display: inline;
     text-align: right;
     margin-left: auto; 
     margin-right: 20px;
-    vertical-align: middle;
+    float: right;
+    margin-top: 5px;
 }
 
 .main{
     grid-column: 2/3;
     grid-row: 2/3;
     height: 100%;
-    background-color: #f8f8f8;
-    /*border: #0c0c16 2px solid;*/
     border-top: 0;
     padding: 20px 30px 20px 30px;
 }
 
-
 #name{
     font-size: 25px;
     padding-right: 25px;
-    top: 50%;
-    bottom: 50%;
 }
 
 #profilepic{
@@ -194,18 +219,7 @@ i{
     border-radius: 50%;
     height: 50px;
 }
-.contact{
-    vertical-align: bottom;
-    background-color: #ffffff;
-    padding-left: 30px;
-    padding-top: 17px;
-    padding-bottom: 10px;
-    margin: 50px;
-    border-radius: 30px;
-    position: absolute;
-    width: 65%;
-    bottom: 0;
-}
+
 h3{
     color: #7c7c7c;
     font-size: 18px;
@@ -328,6 +342,101 @@ input{
     border: 1px solid;
     color: white;
     background-color: black;
+}
+
+.sidebar{
+    grid-column: 3/4;
+    grid-row: 2/3;
+    background-color: #FFFFFF;
+    color: #81868d;
+    border-radius: 20px;
+    height: 85vh;
+    position: relative;
+    margin: 4%;
+    padding-top: 30px;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    text-align: center;
+}
+
+#pendinglist{
+    margin-top: 15px;
+}
+#pendinglist li{
+    width: 70%;
+    border: 1px solid #4456C6;
+    padding: 17px;
+}
+
+#pendinglist li:hover{
+    background-color: #4456C6;
+    color: #ffffff;
+}
+
+#regapprove_modal{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    vertical-align: middle;
+    text-align: center;
+    z-index: 999;
+    display: none;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+.regapprove_modal{
+    position: absolute;
+    background-color: #ffffff;
+    border-radius: 20px;
+    width: 750px;
+    height: auto;
+    top: 10%;
+    left: 25%;
+    padding: 50px;
+}
+.regapprove_modal li{
+    width: 90%;
+    padding-bottom: 0px;
+    margin: 0;
+}
+
+
+#regapprove_modal .ra{
+    background-color: #ffffff;
+    border: 1px solid #4456C6;
+    border-radius: 5px;
+}
+#regapprove_modal .ra:hover{
+    color: #ffffff;
+}
+
+#regapprove_modal .raa{
+    width: 120px;
+    height: 40px;
+    border: 1px solid green;
+}
+#regapprove_modal .raa:hover{
+    background-color: green;
+}
+#regapprove_modal .rar{
+    width: 120px;
+    height: 40px;
+    border: 1px solid red;
+}
+#regapprove_modal .rar:hover{
+    background-color: red;
+}
+
+#regapprove_modal .rac{
+    width: 240px;
+    height: 40px;
+    margin-top: 5px;
+}
+#regapprove_modal .rac:hover{
+    background-color: #4456C6;
 }
 
 @media only screen and (max-width:900px){
